# RelAu2ML

./: .env.example  .gitignore  Dockerfile.dev  Dockerfile.gpu  README.md  docker-compose.dev.yml  docker-compose.gpu.yml  pyproject.toml  setup.py  test_modifications.py  test_training_table.py  tox.ini
examples/: rel-f1-driver-dnf.txt  rel-f1-driver-top3.txt
examples/rel-amazon/: rel-amazon-item-churn.txt  rel-amazon-item-ltv.txt  rel-amazon-user-churn.txt  rel-amazon-user-item-purchase.txt  rel-amazon-user-item-rate.txt  rel-amazon-user-item-review.txt  rel-amazon-user-ltv.txt
examples/rel-avito/: rel-avitio-user-ad-visit.txt  rel-avito-user-visits.txt
examples/rel-event/: rel-event-user-ignore.txt  rel-event-user-repeat.txt
examples/rel-f1/: rel-f1-driver-dnf.txt  rel-f1-driver-position.txt  rel-f1-driver-race-compete.txt  rel-f1-driver-top3.txt
examples/rel-hm/: rel-hm-item-sales.txt  rel-hm-user-churn.txt
examples/rel-stack/: rel-stack-post-post-related.txt  rel-stack-post-votes.txt  rel-stack-user-badge.txt  rel-stack-user-engagement.txt  rel-stack-user-post-comment.txt
examples/rel-trial/: rel-trial-condition-sponsor-run.txt  rel-trial-site-sponsor-run.txt  rel-trial-site-success.txt  rel-trial-study-adverse.txt  rel-trial-study-outcome.txt
paper/chapters/c3/: c3_chapter.tex  c3_from_task2TB.tex  c3_graph.tex  c3_relational_data.tex
paper/chapters/c4/: c4_chapter.tex  c4_conversation.tex  c4_debug.tex  c4_eda_eng.tex  c4_init.tex  c4_model_operation.tex
plexe/: main.py  server.py
plexe/api/: __init__.py  datasets.py  models.py
plexe/langgraph/: config.py  mcp_manager.py  orchestrator.py  state.py
plexe/langgraph/agents/: base.py  conversational.py  dataset_builder.py  eda.py  gnn_specialist.py  operation.py  task_builder.py
plexe/langgraph/mcp_servers/: arxiv_server.py  hpo_server.py  kaggle_server.py  scholar_server.py
plexe/langgraph/prompts/: conversational.py  dataset_builder.py  eda.py  gnn_specialist.py  operation.py  task_builder.py
plexe/langgraph/tools/: __init__.py  common.py  dataset_builder.py  eda.py  gnn_specialist.py  graph_architect.py  task_builder.py
plexe/langgraph/utils/: __init__.py  emitters.py  logging_utils.py  token_tracker.py
plexe/relbench/: __init__.py
plexe/relbench/base/: database.py  table.py
plexe/relbench/modeling/: utils.py
plexe/relbench/tasks/: f1.py
plexe/ui/frontend/: package.json  vite.config.js
plexe/ui/frontend/src/: App.jsx  styles.css  utils.js
plexe/ui/frontend/src/api/: client.js
plexe/ui/frontend/src/components/: Chat.jsx  Dataset.jsx  InferencePanel.jsx  Models.jsx  Sidebar.jsx
plexe/ui/frontend/src/components/dataset/: QueryResult.jsx  UploadTab.jsx
scripts/: CHECK.md  compare_predictions.py  compare_predictions_link.py  download_author_tables.py  generate_relbench_sql_full.py  import_relbench_full.sh  task_registry.py
