[project]
name = "plexe"
version = "0.26.2"
description = "An agentic framework for building ML models from natural language"
authors = [
    { name = "Marcello De Bernardi", email = "mdebernardi@plexe.ai" },
    { name = "Vaibhav Dubey", email = "vdubey@plexe.ai" }
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11,<3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
keywords = ["agent", "custom ai", "llm", "machine learning", "data generation"]
dependencies = [
    "python-dotenv>=1.2.0,<2",
    "pandas>=1.5.0,<=2.2.0",
    "imbalanced-learn>=0.12.4,<0.13",
    "pydantic>=2.9.2,<3",
    "scikit-learn>=1.6.1,<1.7.0",
    "seaborn>=0.12.2,<0.13",
    "dataclasses-json>=0.6.7,<0.7",
    "bandit>=1.8.2,<2",
    "joblib>=1.4.2,<2",
    "mlxtend>=0.23.4,<0.24",
    "xgboost>=2.1.3,<3",
    "tenacity>=9.0.0,<10",
    "pyarrow>=19.0.0,<20",
    "litellm==1.65.8",
    "statsmodels>=0.14.4,<0.15",
    "hypothesis>=6.125.1,<7",
    "numpy>=1.23.2,<2.0.0",
    "black>=24.10.0,<25",
    "jinja2>=3.1.6,<4",
    "platformdirs>=4.3.7,<5",
    "ray>=2.9.0,<3",
    "rich>=13.7.1,<14",
    "torch>=2.3.0,<3",
    "deprecated>=1.2.18,<2",
    "python-multipart>=0.0.16,<0.0.17",
    "psycopg2-binary>=2.9.9,<3",
    "featuretools>=1.31.0,<2",
    "sqlalchemy>=2.0.0,<3",
    "torch-geometric>=2.5.0,<3",
    "pytorch-frame>=0.3.0,<0.4",
    "pooch>=1.8.0,<2",
    "duckdb>=1.3.0,<2",
    "mcp>=1.25.0,<2",
    "scholarly>=1.7.11,<2",
    "kaggle>=1.6.17,<2",
    # LangGraph and LangChain dependencies
    "langgraph>=0.2.0,<0.3",
    "langchain>=0.3.0,<0.4",
    "langchain-core>=0.3.0,<0.4",
    "langchain-openai>=0.2.0,<0.3",
    "langchain-anthropic>=0.2.0,<0.3",
    "langchain-google-genai>=2.0.0,<3",
    # External API clients
    "requests>=2.32.0,<3",
    "openml>=0.14.0,<0.15",
]

[project.optional-dependencies]
# mlflow tách riêng để tránh conflict với ML deps (pre-release với numpy/pandas constraints ketat)
mlflow = [
    "mlflow>=3.0.0rc2,<4",
]
transformers = [
    "transformers>=4.50.0,<5",
    "tokenizers>=0.21.1,<0.22",
    "accelerate==0.24.1",
    "safetensors>=0.4.1,<0.5",
    "sentence-transformers>=3.0.0,<4",
]
chatui = [
    "fastapi>=0.115.12,<0.116",
    "uvicorn[standard]>=0.34.2,<0.35",
    "websockets>=12.0,<13",
]
all = [
    "mlflow>=3.0.0rc2,<4",
    "transformers>=4.50.0,<5",
    "tokenizers>=0.21.1,<0.22",
    "accelerate==0.24.1",
    "safetensors>=0.4.1,<0.5",
    "sentence-transformers>=3.0.0,<4",
    "fastapi>=0.115.12,<0.116",
    "uvicorn[standard]>=0.34.2,<0.35",
    "websockets>=12.0,<13",
]

[project.scripts]
plexe = "plexe.main:main"

[project.urls]
Repository = "https://github.com/plexe-ai/plexe"
Homepage = "https://github.com/plexe-ai/plexe"

[dependency-groups]
dev = [
    "pytest>=8.3.4,<9",
    "pre-commit>=4.0.1,<5",
    "ruff>=0.9.1,<0.10",
    "jupyterlab>=4.2.5,<5",
    "tox>=4.14.1,<5",
    "kaggle==1.6.17",
    "pytest-cov>=6.0.0,<7",
]

[tool.uv]
prerelease = "if-necessary-or-explicit"

[tool.semantic_release]
version_variables = ["pyproject.toml:version"]
commit_parser = "angular"
build_command = "uv build"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["plexe"]

[tool.black]
line-length = 120
target-version = ["py312"]
exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
ignore = [
    "E203", # Whitespace before ':'
    "E501", # Line length
    "E402", # Imports not at top of file
]