[project]
name = "plexe"
version = "0.26.2"
description = "An agentic framework for building ML models from natural language"
authors = [
    { name = "Marcello De Bernardi", email = "mdebernardi@plexe.ai" },
    { name = "Vaibhav Dubey", email = "vdubey@plexe.ai" }
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11,<3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
keywords = ["agent", "custom ai", "llm", "machine learning", "data generation"]
dependencies = [
    "python-dotenv>=1.2.0,<2",
    "pandas>=1.5.0,<3",
    "polars",
    "imbalanced-learn>=0.12.4,<1",
    "pydantic>=2.9.2,<3",
    "scikit-learn>=1.6.1,<2",
    "seaborn>=0.12.2,<1",
    "dataclasses-json>=0.6.7,<0.7",
    "bandit>=1.8.2,<2",
    "joblib>=1.4.2,<2",
    "mlxtend>=0.23.4,<1",
    "xgboost>=2.1.3,<4",
    "tenacity>=9.0.0,<10",
    "pyarrow>=19.0.0,<20",
    "litellm>=1.65.8",
    "statsmodels>=0.14.4,<1",
    "hypothesis>=6.125.1,<7",
    "numpy>=1.23.2,<2.0.0",
    "black>=24.10.0",
    "jinja2>=3.1.6,<4",
    "platformdirs>=4.3.7,<5",
    "ray>=2.9.0,<3",
    "rich>=13.7.1,<15",
    "torch>=2.3.0,<3",
    "deprecated>=1.2.18,<2",
    "python-multipart>=0.0.16",
    "psycopg2-binary>=2.9.9,<3",
    "featuretools>=1.31.0,<2",
    "sqlalchemy>=2.0.0,<3",
    "torch-geometric>=2.5.0,<3",
    "pytorch-frame>=0.3.0,<0.4",
    "pooch>=1.8.0,<2",
    "duckdb>=1.3.0,<2",
    "mcp>=1.25.0,<2",
    "scholarly>=1.7.11,<2",
    "kaggle>=1.6.17,<3",
    # LangGraph and LangChain dependencies
    # langchain 1.x is required — create_agent() only exists in langchain>=1.0
    "langgraph>=1.0.0,<2",
    "langchain>=1.0.0,<2",
    "langchain-core>=1.0.0,<2",
    "langchain-openai>=1.0.0,<2",
    "langchain-anthropic>=1.0.0,<2",
    "langchain-google-genai>=4.0.0,<5",
    # External API clients
    "requests>=2.32.0,<3",
    "openml>=0.14.0,<1",
]

[project.optional-dependencies]
transformers = [
    "transformers>=4.50.0,<6",
    "tokenizers>=0.21.1,<1",
    "accelerate>=0.24.1,<2",
    "safetensors>=0.4.1,<1",
    "sentence-transformers>=3.0.0,<6",
]
chatui = [
    "fastapi>=0.115.12,<1",
    "uvicorn[standard]>=0.34.2,<1",
    "websockets>=12.0,<17",
]
pyg-extensions = [
    "pyg-lib>=0.4.0",
    "torch-scatter>=2.1.0",
    "torch-sparse>=0.6.18",
    "torch-cluster>=1.6.0",
    "torch-spline-conv>=1.2.0",
]
all = [
    "transformers>=4.50.0,<6",
    "tokenizers>=0.21.1,<1",
    "accelerate>=0.24.1,<2",
    "safetensors>=0.4.1,<1",
    "sentence-transformers>=3.0.0,<6",
    "fastapi>=0.115.12,<1",
    "uvicorn[standard]>=0.34.2,<1",
    "websockets>=12.0,<17",
    "plexe[pyg-extensions]",
]

[project.scripts]
plexe = "plexe.main:main"

[project.urls]
Repository = "https://github.com/plexe-ai/plexe"
Homepage = "https://github.com/plexe-ai/plexe"

[dependency-groups]
dev = [
    "pytest>=8.3.4,<9",
    "pre-commit>=4.0.1,<5",
    "ruff>=0.9.1,<0.10",
    "jupyterlab>=4.2.5,<5",
    "tox>=4.14.1,<5",
    "kaggle==1.6.17",
    "pytest-cov>=6.0.0,<7",
]

[tool.semantic_release]
version_variables = ["pyproject.toml:version"]
commit_parser = "angular"
build_command = "uv build"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["plexe"]

[tool.black]
line-length = 120
target-version = ["py312"]
exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.uv]
find-links = [
    "https://data.pyg.org/whl/torch-2.10.0+cu128.html",
    "https://data.pyg.org/whl/nightly/torch-2.10.0+cu128.html",
]
no-build-package = [
    "pyg-lib",
    "torch-scatter",
    "torch-sparse",
    "torch-cluster",
    "torch-spline-conv",
]

[tool.ruff.lint]
ignore = [
    "E203", # Whitespace before ':'
    "E501", # Line length
    "E402", # Imports not at top of file
]